# tagged-pointer-lab

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  conanfile.txt  debug_build.bat  record.md  release_build.bat
benchmark/: CMakeLists.txt  placeholder_benchmark.cpp
src/: CMakeLists.txt  band.h  main.cpp  taggedpointer.h
test/: CMakeLists.txt  placeholder_test.cpp
utils/: math.h  rbtree.h  system.h  time.h  use_concept.h
